/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "basekv/Type.proto";
import "basekv/raft/ClusterConfig.proto";
import "basekv/CoProc.proto";

package basekv;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.basekv.proto";
option optimize_for = SPEED;

message ChangeConfig {
  repeated string voters = 1;
  repeated string learners = 2;
}

message SplitRange {
  bytes splitKey = 1;
  basekv.KVRangeId newId = 2;
}

message PrepareMergeWith{
  basekv.KVRangeId mergeeId = 1;
  repeated string voters = 2; // mergee's voter set seen at the time when request was made
}

message CancelMerging{
}

message PrepareMergeTo{
  basekv.KVRangeId mergerId = 1;
  uint64 mergerVer = 2;
  raft.ClusterConfig config = 3; // merger's config at the moment
  basekv.Boundary boundary = 4; // merger's range at the moment
}

message Merge{
  basekv.KVRangeId mergeeId = 1;
  uint64 mergeeVer = 2;
  basekv.Boundary Boundary = 3;
  string storeId = 4;
  raft.ClusterConfig config = 5; // mergee's config at the moment
}

message MergeDone{
  string storeId = 1;
}

message Delete{
  bytes key = 1;
}

message Put{
  bytes key = 1;
  bytes value = 2;
}

message KVRangeCommand{
  string taskId = 1;
  uint64 ver = 2;
  oneof CommandType{
    ChangeConfig changeConfig = 4;
    SplitRange splitRange = 5;

    PrepareMergeWith prepareMergeWith = 6;
    CancelMerging cancelMerging = 7;
    PrepareMergeTo prepareMergeTo = 8;
    Merge merge = 9;
    MergeDone mergeDone = 10;

    Delete delete = 11;
    Put put = 12;
    RWCoProcInput rwCoProc = 13;
  }
}